[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "Edric Oki Laisan (s4925450@uq.edu.au)"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
